// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Header /> > It should match a snapshot when user is logged in > Logged in user 1`] = `
<body>
  <div>
    <nav
      class="navbar navbar-light header"
    >
      <a
        class="navbar-brand logo"
        href="/"
      >
        eTicket
      </a>
      <div
        class="d-flex justify-content-end"
      >
        <ul
          class="nav d-flex align-items-center"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active-link"
              href="/"
            >
              Buy Ticket
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/tickets/create"
            >
              Sell Ticket
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/orders"
            >
              My Orders
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/users"
            >
              Users
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/auth/signout"
            >
              Sign Out
            </a>
          </li>
        </ul>
        <div
          style="border: 1px solid white; border-radius: 50%; width: 40px; height: 40px; display: flex; background: black; color: lightsteelblue;"
        >
          <p
            style="margin: auto;"
          >
            TT
          </p>
        </div>
      </div>
    </nav>
  </div>
</body>
`;

exports[`<Header /> > It should match a snapshot when user is logged out > Logged out user 1`] = `
<body>
  <div>
    <nav
      class="navbar navbar-light header"
    >
      <a
        class="navbar-brand logo"
        href="/"
      >
        eTicket
      </a>
      <div
        class="d-flex justify-content-end"
      >
        <ul
          class="nav d-flex align-items-center"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/auth/signin"
            >
              Sign In
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/auth/signup"
            >
              Sign Up
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</body>
`;
